--- a/style.css
+++ b/style.css
@@ -5,3 +5,40 @@ body {
     Box-sizing: border-box;
     font-family: Helvetica, Arial, sans-serif;
 }
+
+/* Generics */
+
+.container {
+    max-width: 1600px;
+    margin: 0 auto;
+}
+
+.flex {
+    display: flex;
+
+}
+
+ul {
+    list-style-type: none;
+    gap: 10px;
+    padding-inline-start: 0px;
+}
+
+
+/* !Header */
+header {
+    background-color: rgb(237, 114, 46);
+    padding: 10px;
+    height: 60px;
+}
+
+.nav-bar>div {
+    width: 100%;
+    border: 2px dashed black;
+}
+
+.logo {
+    background-image: url(img/boolean-logo.png);
+    background-size: 20%;
+    background-repeat: no-repeat;
+}
