--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ a {
 }
 
 ul {
-    font: 12px bold;
+    font: 16px bold;
     list-style-type: none;
     gap: 10px;
     padding-inline-start: 0px;
@@ -33,11 +33,13 @@ ul {
 
 img {
     max-width: 100%;
+    display: block;
 }
 
 #item-firm {
     font-size: 14px;
     color: rgba(0, 0, 0, 0.750);
+    margin-top: 5px;
 }
 
 #discounted-price {
@@ -70,7 +72,7 @@ header {
     width: 100%;
     position: fixed;
     z-index: 1;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.37);
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.37);
 }
 
 .nav-bar>div {
@@ -78,7 +80,7 @@ header {
     height: 40px;
     /* border: 2px dashed black; */
     gap: 10px;
-    padding: 0 10px;
+    padding: 0 20px;
 }
 
 .category {
@@ -143,4 +145,16 @@ div.card {
     left: 0;
     bottom: 140px;
     gap: 10px;
+}
+
+#secondary-image {
+    display: none;
+}
+
+.card:hover #secondary-image {
+    display: block;
+}
+
+.card:hover #image {
+    display: none;
 }
