--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ main .fa-solid {
 
 /* todo Main */
 main {
-    padding-top: 100px;
+    padding-top: 90px;
 }
 
 .row {
@@ -134,7 +134,7 @@ div.card {
     /* border: 2px dashed black; */
     flex-basis: calc(100% / 3);
     position: relative;
-    line-height: 16px;
+    line-height: 18px;
     padding: 20px 10px;
 }
 
@@ -144,7 +144,6 @@ div.card {
     position: relative;
     left: 0;
     bottom: 140px;
-    gap: 10px;
 }
 
 #secondary-image {
@@ -157,4 +156,36 @@ div.card {
 
 .card:hover #image {
     display: none;
+}
+
+.fa-solid.fa-heart:hover {
+    color: red;
+    cursor: pointer;
+}
+
+/* *Footer */
+footer {
+    background-color: rgba(0, 0, 0, 0.980);
+    height: 100px;
+    padding: 10px;
+    border-bottom: 1px solid white;
+}
+
+footer .container {
+    height: 100%;
+    padding: 0 20px;
+    color: white;
+    align-items: center;
+    line-height: 30px;
+}
+
+.footer-left {
+    flex-basis: 50%;
+
+}
+
+.footer-right {
+    flex-basis: 50%;
+    flex-direction: column;
+    align-items: end;
 }
